Google style reformat